feat: change font option to display font type

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-source: var(--font-source-serif);
+  --font-rounded: var(--font-roboto-rounded);
 }
 
 @media (prefers-color-scheme: dark) {
